added bitstation card.

--- a/index.html
+++ b/index.html
@@ -134,189 +134,212 @@
             <h3>Some info about me</h3>
             <p> I'm a developer from Southern California melding my passions for programming, computer science research, and
               electrical engineering by creating meaningful products and services. I currently attend Troy High School as a member of the class of 2015.</p>
-            <p>I love research! I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
+              <p>I love research! I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
                 and <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management.</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
                 , natural language processing, computer modeling of natural processes, and even machine learning.</p>
-            <p>Want to know more? Check out the links on the right-hand bar!</p>
-          </br>
-            <h3>Miscellaneous Tidbits</h3>
-            <p> I'm currently reading: </br>
-              <ul>
-                <li><a href="http://mitpress.mit.edu/books/introduction-algorithms" target="_blank">Introduction to Algorithms, 3rd Edition (Cormen, Leiserson, Rivest, and Stein)</a></li>
-              </ul>
-            </p>
-            <p> Music I like: <br>
-              <ul>
-                <li><a href="http://royksopp.com" target="_blank">Röyksopp</a></li>
-                <li><a href="http://lifeandtimes.com" target="_blank">Jay Z</a></li>
-                <li><a href="http://www.jmonae.com" target="_blank">Janelle Monáe</a></li>
-                <li><a href="http://kendricklamar.com" target="_blank">Kendrick Lamar</a></li>
-                <li><a href="http://muse.mu" target="_blank">Muse</a></li>
-            </ul>
-            </p>
-            <p> Bitcoin Address: <br>
-              <a href="https://www.coinbase.com/nelsonliu" target="_blank">18c6WUcgo5gJVj6QgpnH5ZX5aBhHpWSLYv</a><br></p>
-          </div>
-        </div>
+                <p>Want to know more? Check out the links on the right-hand bar!</p>
+              </br>
+              <h3>Miscellaneous Tidbits</h3>
+              <p> I'm currently reading: </br>
+                <ul>
+                  <li><a href="http://mitpress.mit.edu/books/introduction-algorithms" target="_blank">Introduction to Algorithms, 3rd Edition (Cormen, Leiserson, Rivest, and Stein)</a></li>
+                </ul>
+              </p>
+              <p> Music I like: <br>
+                <ul>
+                  <li><a href="http://royksopp.com" target="_blank">Röyksopp</a></li>
+                  <li><a href="http://lifeandtimes.com" target="_blank">Jay Z</a></li>
+                  <li><a href="http://www.jmonae.com" target="_blank">Janelle Monáe</a></li>
+                  <li><a href="http://kendricklamar.com" target="_blank">Kendrick Lamar</a></li>
+                  <li><a href="http://muse.mu" target="_blank">Muse</a></li>
+                </ul>
+              </p>
+              <p> Bitcoin Address: <br>
+                <a href="https://www.coinbase.com/nelsonliu" target="_blank">18c6WUcgo5gJVj6QgpnH5ZX5aBhHpWSLYv</a><br></p>
+              </div>
+            </div>
 
 
-        <!-- content for the skillset page -->
+            <!-- content for the skillset page -->
 
-        <div class="contentdiv" id="skillscontent" style="display:none;">
-          <div class="skillbanner banner shadow-z-2">
-            <div class="bannerpadding">
-              <h1>My Skillset</h1>
-            </br>
-            <p style = "color: white;" >What I'm great at, what I'm progressing on, and what I'm starting to learn.</p>
-          </div>
-        </div>
-          <div class="chartpadding">
-          <h3>Web Development</h3>
-          <div class="row">
-            <div class="col-sm-4" style="padding-left: 0px;">
-              <div class="panel panel-default">
-                <div class="panel-heading">Back-End Development</div>
-                <div class="panel-body">
-                  Flask
-                  <span class="label label-success" style="float:right;">Proficient</span>
+            <div class="contentdiv" id="skillscontent" style="display:none;">
+              <div class="skillbanner banner shadow-z-2">
+                <div class="bannerpadding">
+                  <h1>My Skillset</h1>
+                </br>
+                <p style = "color: #B9E9FF;" >What I'm great at, what I'm progressing on, and what I'm starting to learn.</p>
+              </div>
+            </div>
+            <div class="chartpadding">
+              <h3>Web Development</h3>
+              <div class="row">
+                <div class="col-sm-4" style="padding-left: 0px;">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">Back-End Development</div>
+                    <div class="panel-body">
+                      Flask
+                      <span class="label label-success" style="float:right;">Proficient</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      Ruby on Rails
+                      <span class="label label-warning" style="float:right;">Intermediate</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      PHP
+                      <span class="label label-danger" style="float:right;">Beginner</span>
+                    </div>
+                  </div>
                 </div>
-                <hr>
-                <div class="panel-body">
-                  Ruby on Rails
-                  <span class="label label-warning" style="float:right;">Intermediate</span>
+                <div class="col-sm-4" style="padding-left: 0px;">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">Front-End Development</div>
+                    <div class="panel-body">
+                      HTML
+                      <span class="label label-success" style="float:right;">Proficient</span>
+
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      CSS
+                      <span class="label label-success" style="float:right;">Proficient</span>
+
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      JavaScript
+                      <span class="label label-success" style="float:right;">Proficient</span>
+
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      JQuery
+                      <span class="label label-success" style="float:right;">Proficient</span>
+
+                    </div>
+                    <hr>
+                  </div>
                 </div>
-                <hr>
-                <div class="panel-body">
-                  PHP
-                  <span class="label label-danger" style="float:right;">Beginner</span>
+                <div class="col-sm-4" style="padding-left: 0px;">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">Databases</div>
+                    <div class="panel-body">
+                      SQL
+                      <span class="label label-success" style="float:right;">Proficient</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      MongoDB
+                      <span class="label label-danger" style="float:right;">Beginner</span>
+                    </div>
+                  </div>
                 </div>
               </div>
+
+              <h3>Programming Languages</h3>
+              <div class="row">
+                <div class="col-sm-4" style="padding-left: 0px;">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">Desktop</div>
+                    <div class="panel-body">
+                      Java
+                      <span class="label label-success" style="float:right;">Proficient</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      Python
+                      <span class="label label-success" style="float:right;">Proficient</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      R
+                      <span class="label label-danger" style="float:right;">Beginner</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4" style="padding-left: 0px;">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">Mobile</div>
+                    <div class="panel-body">
+                      Android
+                      <span class="label label-danger" style="float:right;">Beginner</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      iOS
+                      <span class="label label-danger" style="float:right;">Beginner</span>
+                    </div>
+                    <hr>
+                  </div>
+                </div>
+                <div class="col-sm-4" style="padding-left: 0px;">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">Miscellaneous</div>
+                    <div class="panel-body">
+                      Bash
+                      <span class="label label-success" style="float:right;">Proficient</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      Git / SVN
+                      <span class="label label-success" style="float:right;">Proficient</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      Photoshop
+                      <span class="label label-success" style="float:right;">Proficient</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
+                      UI / UX Design
+                      <span class="label label-warning" style="float:right;">Intermediate</span>
+                    </div>
+                    <hr>
+                  </div>
+                </div>
+              </div>
+
+            </div>
           </div>
-          <div class="col-sm-4" style="padding-left: 0px;">
+
+
+          <div class="contentdiv" id="projectscontent" style="display:none;">
+            <div class="projectbanner banner shadow-z-2">
+              <div class="bannerpadding">
+                <h1>My Projects</h1>
+              </br>
+              <p style = "color: #8CCFC9;" >What I'm working on.</p>
+            </div>
+          </div>
+          <div class="contentpadding">
+            <h3>I strive to build things that are <b>intuitive</b>, <b>beautiful</b>, and <b>practical</b>.</h3>
+            <p><i>Click on a card to learn more.</i></p>
             <div class="panel panel-default">
-              <div class="panel-heading">Front-End Development</div>
               <div class="panel-body">
-                HTML
-                <span class="label label-success" style="float:right;">Proficient</span>
+                <div class="time-period" style="float:right;">Summer 2014</div>
+                <h3><b>BitStation (Improving MIT Award @ MIT BitComp 2014)</b></h3>
+                <p>An MIT Kerberos - Integrated Bitcoin wallet. Bypass unwieldy Bitcoin addresses and send money via MIT ID.</p>
+                </br>
+                <p class="alignleft">Ruby on Rails, Coinbase API, JavaScript, HTML, CSS.</p>
+                <p class="alignright">
+                  <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+                  &nbsp;
+                  <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
 
-              </div>
-              <hr>
-              <div class="panel-body">
-                CSS
-                <span class="label label-success" style="float:right;">Proficient</span>
-
-              </div>
-              <hr>
-              <div class="panel-body">
-                JavaScript
-                <span class="label label-success" style="float:right;">Proficient</span>
-
-              </div>
-              <hr>
-              <div class="panel-body">
-                JQuery
-                <span class="label label-success" style="float:right;">Proficient</span>
-
-              </div>
-              <hr>
-            </div>
-          </div>
-          <div class="col-sm-4" style="padding-left: 0px;">
-            <div class="panel panel-default">
-              <div class="panel-heading">Databases</div>
-              <div class="panel-body">
-                SQL
-                <span class="label label-success" style="float:right;">Proficient</span>
-              </div>
-              <hr>
-              <div class="panel-body">
-                MongoDB
-                <span class="label label-danger" style="float:right;">Beginner</span>
+                </p>
+                <div class="clear"></div>
               </div>
             </div>
-          </div>
-        </div>
 
-        <h3>Programming Languages</h3>
-        <div class="row">
-          <div class="col-sm-4" style="padding-left: 0px;">
-            <div class="panel panel-default">
-              <div class="panel-heading">Desktop</div>
-              <div class="panel-body">
-                Java
-                <span class="label label-success" style="float:right;">Proficient</span>
-              </div>
-              <hr>
-              <div class="panel-body">
-                Python
-                <span class="label label-success" style="float:right;">Proficient</span>
-              </div>
-              <hr>
-              <div class="panel-body">
-                R
-                <span class="label label-danger" style="float:right;">Beginner</span>
-              </div>
-            </div>
           </div>
-          <div class="col-sm-4" style="padding-left: 0px;">
-            <div class="panel panel-default">
-              <div class="panel-heading">Mobile</div>
-              <div class="panel-body">
-                Android
-                <span class="label label-danger" style="float:right;">Beginner</span>
-              </div>
-              <hr>
-              <div class="panel-body">
-                iOS
-                <span class="label label-danger" style="float:right;">Beginner</span>
-              </div>
-              <hr>
-            </div>
-          </div>
-          <div class="col-sm-4" style="padding-left: 0px;">
-            <div class="panel panel-default">
-              <div class="panel-heading">Miscellaneous</div>
-              <div class="panel-body">
-                Bash
-                <span class="label label-success" style="float:right;">Proficient</span>
-              </div>
-              <hr>
-              <div class="panel-body">
-                Git / SVN
-                <span class="label label-success" style="float:right;">Proficient</span>
-              </div>
-              <hr>
-              <div class="panel-body">
-                Photoshop
-                <span class="label label-success" style="float:right;">Proficient</span>
-              </div>
-              <hr>
-              <div class="panel-body">
-                UI / UX Design
-                <span class="label label-warning" style="float:right;">Intermediate</span>
-              </div>
-              <hr>
-            </div>
-          </div>
-        </div>
 
-      </div>
-      </div>
-
-
-        <div class="contentdiv" id="projectscontent" style="display:none;">
-          projects
-          <div class="panel panel-default">
-            <div class="panel-body">
-              Basic panel
-            </div>
-          </div>
         </div>
         <!-- Not using this
-        <div class="contentdiv" id="resumecontent" style="display:none;">
-          resume
-        </div>
-      -->
+          <div class="contentdiv" id="resumecontent" style="display:none;">
+            resume
+          </div>
+        -->
         <div class="contentdiv" id="connectcontent" style="display:none;">
           connect
         </div>
