added hover effects to project cards

--- a/index.html
+++ b/index.html
@@ -315,8 +315,10 @@
           <div class="contentpadding">
             <h3>I strive to build things that are <b>intuitive</b>, <b>beautiful</b>, and <b>practical</b>.</h3>
             <p><i>Click on a card to learn more.</i></p>
+            <div class = "cardcontainer">
+            <div class = "item">
             <div class="panel panel-default">
-              <div class="panel-body">
+              <div class="panel-body hoverpanel">
                 <div class="time-period" style="float:right;">Summer 2014</div>
                 <h3><b>BitStation (Improving MIT Award @ MIT BitComp 2014)</b></h3>
                 <p>An MIT Kerberos - Integrated Bitcoin wallet. Bypass unwieldy Bitcoin addresses and send money via MIT ID.</p>
@@ -331,6 +333,8 @@
                 <div class="clear"></div>
               </div>
             </div>
+          </div>
+        </div>
 
           </div>
 
