finished initial version

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                   <li><a href="http://www.jmonae.com" target="_blank">Janelle Monáe</a></li>
                   <li><a href="http://kendricklamar.com" target="_blank">Kendrick Lamar</a></li>
                   <li><a href="http://muse.mu" target="_blank">Muse</a></li>
+                  <li><a href="http://alligatoah.de/" target="_blank">Alligatoah</a></li>
                 </ul>
               </p>
               <p> Bitcoin Address: <br>
@@ -314,16 +315,45 @@
           </div>
           <div class="contentpadding">
             <h3>I strive to build things that are <b>intuitive</b>, <b>beautiful</b>, and <b>practical</b>.</h3>
+            <!-- Not yet
             <p><i>Click on a card to learn more.</i></p>
-            <div class = "cardcontainer">
+          -->
+          </br>
+          <div class = "cardcontainer">
+
             <div class = "item">
+              <div class="panel panel-default">
+                <div class="panel-body hoverpanel" >
+                  <div class="time-period" style="float:right;">Coming Winter 2014</div>
+                  <h3><b>GrowHaus</b> <span class="label label-success">Project In Progress</span></h3>
+                  <p>An intelligent, automated greenhouse.</p>
+                </br>
+                <p class="alignleft">Arduino, Raspberry Pi.</p>
+
+                <!-- In progress
+                  <p class="alignright">
+                    <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+                    &nbsp;
+                    <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+
+                  </p>
+                -->
+
+                <div class="clear"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class = "item">
             <div class="panel panel-default">
               <div class="panel-body hoverpanel">
-                <div class="time-period" style="float:right;">Summer 2014</div>
-                <h3><b>BitStation (Improving MIT Award @ MIT BitComp 2014)</b></h3>
-                <p>An MIT Kerberos - Integrated Bitcoin wallet. Bypass unwieldy Bitcoin addresses and send money via MIT ID.</p>
-                </br>
-                <p class="alignleft">Ruby on Rails, Coinbase API, JavaScript, HTML, CSS.</p>
+                <div class="time-period" style="float:right;">Coming Winter 2014</div>
+                <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
+                <p>An open source, affordable device to perform automated malaria diagnoses on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
+              </br>
+              <p class="alignleft">Raspberry Pi, Python.</p>
+
+              <!-- In progress
                 <p class="alignright">
                   <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
                   &nbsp;
@@ -331,32 +361,177 @@
 
                 </p>
                 <div class="clear"></div>
-              </div>
+              -->
             </div>
           </div>
         </div>
 
+        <div class = "item">
+          <div class="panel panel-default">
+            <div class="panel-body hoverpanel">
+              <div class="time-period" style="float:right;">Fall 2014</div>
+              <h3><b>Falangafone (Top 20 @ HackPrinceton Fall 2014)</b></h3>
+              <p>Use Leap Motion and your dear phalanges to interact with and meld your music in ways never seen before.</p>
+            </br>
+            <p class="alignleft">Flask, Leap Motion API, Python, Pyo, Squirrel, Electric Imp, HTML, CSS, JavaScript</p>
+            <p class="alignright">
+              <a href="http://www.instructables.com/id/Falangafone-Use-Gestures-to-Control-Your-Music/" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+              &nbsp;
+              <a href="https://github.com/mitchellgu/Falangafone" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+
+            </p>
+            <div class="clear"></div>
           </div>
-
         </div>
-        <!-- Not using this
-          <div class="contentdiv" id="resumecontent" style="display:none;">
-            resume
-          </div>
-        -->
-        <div class="contentdiv" id="connectcontent" style="display:none;">
-          connect
+      </div>
+
+      <div class = "item">
+        <div class="panel panel-default">
+          <div class="panel-body hoverpanel">
+            <div class="time-period" style="float:right;">Fall 2014</div>
+            <h3><b>r/nbastreams bot</b></h3>
+            <p>A Reddit bot that scrapes basketball games from ESPN and posts them prior to gametime.</p>
+          </br>
+          <p class="alignleft">Python Reddit API Wrapper, Python, cron.</p>
+          <p class="alignright">
+            <a href="https://reddit.com/r/nbastreams" target="_blank"><i class="fa fa-reddit fa-2x"></i></a>
+            &nbsp;
+            <a href="https://github.com/nelson-liu/rnbastreams-bot" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+
+          </p>
+          <div class="clear"></div>
         </div>
+      </div>
+    </div>
 
+    <div class = "item">
+      <div class="panel panel-default">
+        <div class="panel-body hoverpanel">
+          <div class="time-period" style="float:right;">Summer 2014</div>
+          <h3><b>BitStation (Improving MIT Award @ MIT BitComp 2014)</b></h3>
+          <p>A MIT Kerberos - Integrated Bitcoin wallet. Bypass unwieldy Bitcoin addresses and send money via MIT ID.</p>
+        </br>
+        <p class="alignleft">Ruby on Rails, Coinbase API, JavaScript, HTML, CSS.</p>
+        <p class="alignright">
+          <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+          &nbsp;
+          <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
 
-
-
-
-        <!-- /main -->
-
+        </p>
+        <div class="clear"></div>
       </div>
     </div>
   </div>
+
+
+</div>
+
+</div>
+
+</div>
+<!-- Not using this
+  <div class="contentdiv" id="resumecontent" style="display:none;">
+    resume
+  </div>
+-->
+
+
+<div class="contentdiv" id="connectcontent" style="display:none;">
+  <div class="connectbanner banner shadow-z-2">
+    <div class="bannerpadding">
+      <h1>Let's Talk!</h1>
+    </br>
+    <p style = "color:#BEC4C7;">Feel free to contact me if you want to talk about CS, life, or even just say hello!</p>
+  </div>
+</div>
+<div class="contentpadding">
+  <h3>Contact Me</h3>
+  <p><i>Click on a card for a direct link.</i></p>
+  <div class = "row">
+    <div class="col-sm-6" style="padding-left: 0px;">
+  <div class = "cardcontainer">
+    <div class = "item">
+      <div class="  panel panel-default" style="background-color: #4CAF50; text-align: center; color: white;" onclick="window.open('mailto:nelson@nelsonliu.me', 'emailWindow');">
+        <div class="panel-body hoverpanel socialcard">
+          <i class="fa fa-envelope-o fa-4x"></i>
+          </br>
+          <h3>nelson [at] nelsonliu.me</h3>
+        </br>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+  <!--^end of card-->
+  <div class="col-sm-6" style="padding-left: 0px;">
+  <div class = "cardcontainer">
+    <div class = "item">
+      <div class="  panel panel-default" style="background-color: #2196F3; text-align: center; color: white;" onclick="window.open('https://lnkd.in/bbDXB8B','mywindow');">
+        <div class="panel-body hoverpanel socialcard">
+          <i class="fa fa-linkedin-square fa-4x"></i>
+        </br>
+        <h3>lnkd.in/bbDXB8B</h3>
+      </br>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+</div>
+<!--^end of row-->
+
+<div class = "row">
+  <div class="col-sm-6" style="padding-left: 0px;">
+    <div class = "cardcontainer">
+      <div class = "item">
+        <div class="  panel panel-default" style="background-color: #FF6F00; text-align: center; color: white;" onclick="window.open('https://github.com/nelson-liu','mywindow');">
+          <div class="panel-body hoverpanel socialcard">
+            <i class="fa fa-github fa-4x"></i>
+          </br>
+          <h3>github.com/nelson-liu</h3>
+        </br>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<!--^end of card-->
+<div class="col-sm-6" style="padding-left: 0px;">
+  <div class = "cardcontainer">
+    <div class = "item">
+      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('https://medium.com/@nelsonliu','mywindow');">
+        <div class="panel-body hoverpanel socialcard">
+          <i class="fa fa-pencil-square fa-4x"></i>
+        </br>
+        <h3>medium.com/@nelsonliu</h3>
+      </br>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+</div>
+<!--^end of row-->
+
+
+</div>
+<!--^end of contentpadding-->
+
+</div>
+<!--^end of contact section-->
+
+
+
+
+
+
+  <!-- /main -->
+
+</div>
+</div>
+</div>
 </div>
 
 </body>
